--- a/1_Statistics_Review_of_Regression.html
+++ b/1_Statistics_Review_of_Regression.html
@@ -14591,7 +14591,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div class="alert alert-block alert-warning">
-<b>In order to run codes in this notebook, please make sure you have downloaded the mateiral folder from Github and have R installed on your laptop.</b>
+<b>In order to run codes in this notebook, please make sure you have downloaded the "bigcare-main" folder from Github and have R installed on your laptop.</b>
 </div>
 </div>
 </div>
