--- a/2_Summary_of_Data_Preprocess_and_Association_Test.html
+++ b/2_Summary_of_Data_Preprocess_and_Association_Test.html
@@ -14628,7 +14628,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 mydir=&quot;/path/to/bigcare-main&quot;
 cd $mydir
 
-# R codes
+# R codes- run in R
 setwd(&quot;/path/to/bigcare-main&quot;)
 </pre></div>
 
@@ -16200,7 +16200,7 @@ Have a nice day!
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="EIGENSTRAT-input-files---an-example-of-10k-SNPs">EIGENSTRAT input files-- an example of 10k SNPs<a class="anchor-link" href="#EIGENSTRAT-input-files---an-example-of-10k-SNPs">&#182;</a></h2>
+<h2 id="EIGENSTRAT-input-files---an-example-of-1k-SNPs">EIGENSTRAT input files-- an example of 1k SNPs<a class="anchor-link" href="#EIGENSTRAT-input-files---an-example-of-1k-SNPs">&#182;</a></h2>
 </div>
 </div>
 </div>
