--- a/ch1_Statistics_Review_of_Regression.html
+++ b/ch1_Statistics_Review_of_Regression.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>1_Statistics_Review_of_Regression</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>ch1_Statistics_Review_of_Regression</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="An-Overview-of-Regression-with-toy-examples-">An Overview of Regression with toy examples <a class="tocSkip" /><a class="anchor-link" href="#An-Overview-of-Regression-with-toy-examples-">&#182;</a></h1>
+<h1 id="Chapter-1.-An-Overview-of-Regression-with-toy-examples-">Chapter 1. An Overview of Regression with toy examples <a class="tocSkip" /><a class="anchor-link" href="#Chapter-1.-An-Overview-of-Regression-with-toy-examples-">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -14591,7 +14591,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div class="alert alert-block alert-warning">
-<b>In order to run codes in this notebook, please make sure you have downloaded the "bigcare-main" folder from Github and have R installed on your laptop.</b>
+<b>In order to run codes in this notebook, please make sure you have downloaded the "bigcare-main" folder from Github and have RStudio installed on your laptop.</b>
 </div>
 </div>
 </div>
@@ -14608,7 +14608,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li>case/control study by logistic regression</li>
 <li>quantitative trait study by linear regression</li>
 </ol>
-<p>We use only R codes in this notebook.</p>
+<p><strong>We use only R codes in this notebook.</strong></p>
 
 </div>
 </div>
@@ -14620,7 +14620,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Environment-Setting-and-Packages">Environment Setting and Packages<a class="anchor-link" href="#Environment-Setting-and-Packages">&#182;</a></h1><p>Before we can run any analysis, we need to set the working directory path to the downloaded "bigcare-main" folder and load the necessary R packages. To setup the working directory, make sure you run the following codes in R.</p>
+<h1 id="Environment-Setting-and-Packages">Environment Setting and Packages<a class="anchor-link" href="#Environment-Setting-and-Packages">&#182;</a></h1><p>Before we can run any analysis, we need to set the working directory path in RStudio Console to the downloaded "bigcare-main" folder and load the necessary R packages. To setup the working directory, make sure you run the following codes in R Terminal.</p>
 
 </div>
 </div>
@@ -14685,7 +14685,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>After installation, The list of packages are loaded with <code>library()</code> function.</p>
-<p><strong>The following code might generate multiple messages when loading the packages, such as "The following objects are masked from XXX", which is normal.You can ignore them.</strong></p>
+<p><strong>The following code might generate multiple messages when loading the packages, such as "The following objects are masked from XXX", which is normal. You can ignore them.</strong></p>
 
 </div>
 </div>
