--- a/ch2_Summary_of_Data_Preprocess_and_Association_Test.html
+++ b/ch2_Summary_of_Data_Preprocess_and_Association_Test.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>2_Summary_of_Data_Preprocess_and_Association_Test</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>ch2_Summary_of_Data_Preprocess_and_Association_Test</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Demonstration-of-Data-Preprocess-and-Simple-Association-Test-Using-Toy-Examples-">Demonstration of Data Preprocess and Simple Association Test Using Toy Examples <a class="tocSkip" /><a class="anchor-link" href="#Demonstration-of-Data-Preprocess-and-Simple-Association-Test-Using-Toy-Examples-">&#182;</a></h1>
+<h1 id="Chapter-2.-Demonstration-of-Data-Preprocess-and-Simple-Association-Test-Using-Toy-Examples-">Chapter 2. Demonstration of Data Preprocess and Simple Association Test Using Toy Examples <a class="tocSkip" /><a class="anchor-link" href="#Chapter-2.-Demonstration-of-Data-Preprocess-and-Simple-Association-Test-Using-Toy-Examples-">&#182;</a></h1>
 </div>
 </div>
 </div>
